src/ui/snapshots/starfold__ui__frames__preview-dir.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ S T A R / F O L D ══════════════════════════════════════════════════════════════════════ stack ═╗
║                                         ‹  hidden  sort  filter  Bookmark  places  view  actions ║
║▸ ~                                                                                        6 items║
║▸ projects/                                                                                 1 item║
║─ starwire/ ── 2 files · 2 dirs · 336 B ──────────────────────────────────────────────────────────║
║    ▸ src/                                                         dir             -  Sep 10      ║
║    ▸ target/                                                      dir             -  Sep 10      ║
║    λ Cargo.toml                                                   toml         92 B  11:00       ║
║    ≡ README.md                                                    md          244 B  Sep 10      ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ PREVIEW — ▸ src ════════════════════════════════════════════════════════════════════════════════╗
║                                                                                            close ║
║                                                                    Tree · 1 files · 0 dirs shown ║
║ └── λ main.rs                                                                                    ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                       run  clear ║
║                                          nothing queued                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  / filter  space mark  enter open  y yank  p paste  m move  d delet  ~/projects/starwire  off
