src/ui/snapshots/starfold__ui__frames__preview-image-smooth.snap
---
source: src/ui/frames.rs
assertion_line: 650
expression: text
---
╔═ S T A R / F O L D ══════════════════════════════════════════════════════════════════════ stack ═╗
║                                         ‹  hidden  sort  filter  Bookmark  places  view  actions ║
║▸ ~                                                                                        6 items║
║─ pictures/ ── 1 files · 0 dirs · 482 B ──────────────────────────────────────────────────────────║
║    ▧ harbour.png                                                  png         482 B  Sep 10      ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
╚═■■■■■■■■■■■■ 125.0 GB free / 500.0 GB total══════════════════════════════════════════════════════╝
╔═ PREVIEW — ▧ harbour.png ════════════════════════════════════════════════════════════════════════╗
║                                                                                            close ║
║                                           ▀▀▀▀▀▀▀▀▀▀▀                                            ║
║                                           ▀▀▀▀▀▀▀▀▀▀▀                                            ║
║                                           ▀▀▀▀▀▀▀▀▀▀▀                                            ║
║                                           ▀▀▀▀▀▀▀▀▀▀▀                                            ║
║                                                                        png · 64 × 48 · smooth ×1 ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                           remove ║
║                                          nothing queued                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  picture scale: smooth                                                        ~/pictures  off
