src/ui/snapshots/starfold__ui__frames__progress-terminal-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ S T A R / F O L D ══════════════════════════════════════════════════════════════════════ stack ═╗
║                                         ‹  hidden  sort  filter  Bookmark  places  view  actions ║
║▸ ~                                                                                        6 items║
║─ empty/ ── 1 files · 0 dirs · 256 B ─────────────────────────────────────────────────────────────║
║    ◇ blob.bin                                                     bin         256 B  Sep 10      ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ PREVIEW — ◇ blob.bin ═══════════════════════════════════════════════════════════════════════════╗
║                                                                                            close ║
║                                                                                    File metadata ║
║ Type: application/octet-stream                                                                   ║
║ Size: 256 B                                                                                      ║
║ Permissions: -rw-r--r--                                                                          ║
║ Modified: 2026-09-10T12:00:00Z                                                                   ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ OPERATIONS — copying 78.0% ═════════════════════════════════════════════════════════════════════╗
║                                                                                   cancel  remove ║
║COPY 1 item: ~/blob.bin → ~/empty ███████▊░░ 78.0% · ctrl+x cancel · x remove · esc remove waiting║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  yanked 1 item                                                                   ~/empty  off
