src/ui/snapshots/starfold__ui__frames__recovery-undo-catppuccin-latte-100x30.snap
---
source: src/ui/frames.rs
expression: output
---
╔═ S T A R / F O L D ══════════════════════════════════════════════════════════════════════ stack ═╗
║                                         ‹  hidden  sort  filter  Bookmark  places  view  actions ║
║─ ~ ── 3 files · 3 dirs · 290 B ──────────────────────────────────────────────────────────────────║
║    ▸ empty/                                                       dir             -  Sep 10      ║
║    ▸ pictures/                                                    dir             -  Sep 10      ║
║    ▸ projects/                                                    dir             -  Sep 10      ║
║›╔═ UNDO · THIS SESSION ════════════════════════════════════════════════════════════════════════╗ ║
║ ║› blob.bin                                                                                    ║ ║
║ ║  → ~/blob.bin                                                                                ║ ║
║ ║                                                                                              ║ ║
║ ║                                                                                              ║ ║
║ ║                                                                                              ║ ║
║ ║                                                                                              ║ ║
║ ║                                                                                              ║ ║
║ ║                                                                                              ║ ║
║ ║                                                                                              ║ ║
╚═║                                                                                              ║═╝
╔═║                                                                                              ║═╗
║ ║                                                                                              ║ ║
║ ║                                                                                              ║ ║
║ ║                                                                                              ║ ║
║ ║                                                                                              ║ ║
║ ║                                                                                              ║ ║
║ ╚══════════════════════════════════════════ enter recover · r refresh · j/k select · esc close ╝ ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                           remove ║
║                                          nothing queued                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  / filter  space mark  enter open  y yank  p paste  m move  dd delete                  ~  off
